Added Swarm Info

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<!-- BASICS -->
         <meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Amoeba free one page responsive bootstrap site template</title>
+        <title>Swarm IIT Kharagpur</title>
         <meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/isotope.css" media="screen" />	
@@ -33,9 +33,9 @@
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav" data-0="margin-top:20px;" data-300="margin-top:5px;">
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="#section-about">About</a></li>
-						<li><a href="#section-works">Portfolio</a></li>
-						<li><a href="#section-contact">Contact</a></li>
+						<li><a href="#section-about">About Us</a></li>
+						<li><a href="#section-works">Project Description</a></li>
+						<li><a href="#section-contact">Join Us</a></li>
 					</ul>
 				</div><!--/.navbar-collapse -->
 			</div>
@@ -48,12 +48,9 @@
 						
 						<div class="align-center">
 							<i class="fa fa-flask fa-5x mar-bot20"></i>
-							<h2 class="slogan">Welcome to Amoeba</h2>
+							<h2 class="slogan">Welcome to Swarm Research Group.</h2>
 							<p>
-							Lorem ipsum dolor sit amet, natum bonorum expetendis usu ut. 
-							Eum impetus offendit disputationi eu, at vim aliquip lucilius praesent. 
-							Alia laudem antiopam te ius, sed ad munere integre, ubique facete sapientem nam ut. 
-				
+			                Content goes in here.
 							</p>	
 						</div>
 					</div>
@@ -69,9 +66,8 @@
 				<div class="col-lg-4" >
 					<div class="align-center">
 						<i class="fa fa-code fa-5x mar-bot20"></i>
-						<h4 class="text-bold">Valid HTML5</h4>
-						<p>Lorem ipsum dolor sit amet, mutat graeco volumus ad eam, singulis patrioque comprehensam nam no. 
-						Mei cu dicat voluptaria volumus.
+						<h4 class="text-bold">Something</h4>
+						<p>Single line description.
 						</p>
 					</div>
 				</div>
@@ -79,9 +75,8 @@
 				<div class="col-lg-4" >
 					<div class="align-center">
 						<i class="fa fa-terminal fa-5x mar-bot20"></i>
-						<h4 class="text-bold">Responsive</h4>
-						<p>Lorem ipsum dolor sit amet, mutat graeco volumus ad eam, singulis patrioque comprehensam nam no. 
-						Mei cu dicat voluptaria volumus.
+						<h4 class="text-bold">Something Else</h4>
+						<p>Another one liner.
 						</p>
 					</div>
 				</div>
@@ -89,9 +84,8 @@
 				<div class="col-lg-4" >
 					<div class="align-center">
 						<i class="fa fa-bolt fa-5x mar-bot20"></i>
-						<h4 class="text-bold">Customizable</h4>
-						<p>Lorem ipsum dolor sit amet, mutat graeco volumus ad eam, singulis patrioque comprehensam nam no. 
-						Mei cu dicat voluptaria volumus.
+						<h4 class="text-bold">Something yet again</h4>
+						<p>Fill this up.
 						</p>
 					</div>
 				</div>
@@ -141,8 +135,8 @@
 							<div class="team-member">
 								<figure class="member-photo"><img src="img/team/member1.jpg" alt="" /></figure>
 								<div class="team-detail">
-									<h4>Jason Doe</h4>
-									<span>User experiences</span>
+									<h4>Team Member 1</h4>
+									<span>Job profile</span>
 								</div>
 							</div>
 						</div>
@@ -150,26 +144,8 @@
 							<div class="team-member">
 								<figure class="member-photo"><img src="img/team/member2.jpg" alt="" /></figure>
 								<div class="team-detail">
-									<h4>Timothy Clark</h4>
-									<span>Web developer</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="team-member">
-								<figure class="member-photo"><img src="img/team/member3.jpg" alt="" /></figure>
-								<div class="team-detail">
-								<h4>Vicky Tan</h4>
-									<span>Web designer</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="team-member">
-								<figure class="member-photo"><img src="img/team/member4.jpg" alt="" /></figure>
-								<div class="team-detail">
-								<h4>Kevin Peterson</h4>
-									<span>UI designer</span>
+									<h4>Team Member 2</h4>
+									<span>Job Profile</span>
 								</div>
 							</div>
 						</div>
@@ -441,10 +417,10 @@
                 // For more options see: https://developers.google.com/maps/documentation/javascript/reference#MapOptions
                 var mapOptions = {
                     // How zoomed in you want the map to start at (always required)
-                    zoom: 11,
+                    zoom: 16,
 
                     // The latitude and longitude to center the map (always required)
-                    center: new google.maps.LatLng(40.6700, -73.9400), // New York
+                    center: new google.maps.LatLng(22.3149071, 87.309254), // New York
 
                     // How you would like to style the map. 
                     // This is where you would paste any style found on Snazzy Maps.
