--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="fa fa-bars color-white"></span>
 					</button>
-					<h1><a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;">			Amoeba
+					<h1><a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;">	Swarm IIT Kharagpur
 					</a></h1>
 				</div>
 				<div class="navbar-collapse collapse">
