Changed video size to cover entire screen

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
 	 
     <body>
-    	<div style="width: 1366px; height: 551px;"
+    	<div style="width: 100%; height: 720px;"
     		data-vide-bg="video/ocean" data-vide-options="loop: true, muted: true, position: 0% 0%">
 		
 			<section id="header" class="appear"></section>
