--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 							<div id="sendmessage">
 								 Your message has been sent. Thank you!
 							</div>
-							<form action="http://formspree.io/adityabhagat95@yahoo.co.in" method="post" role="form" class="contactForm">
+							<form action="http://formspree.io/someone@swarmrobotix.com" method="post" role="form" class="contactForm">
 							  <div class="form-group">
 								<label for="name">Your Name</label>
 								<input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="maxlen:4" data-msg="Please enter at least 4 chars" />
