Added Swarm Video and made changes to Landing Page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	 
     <body>
     	<div style="width: 100%; height: 720px;"
-    		data-vide-bg="video/ocean" data-vide-options="loop: true, muted: true, position: 0% 0%">
+    		data-vide-bg="video/swarm" data-vide-options="loop: true, muted: true, position: 0% 0%">
 		
 			<section id="header" class="appear"></section>
 			<div class="navbar navbar-fixed-top" role="navigation" data-0="line-height:100px; height:100px; background-color:rgba(0,0,0,0.3);" data-300="line-height:60px; height:60px; background-color:rgba(0,0,0,1);">
@@ -30,7 +30,7 @@
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 							<span class="fa fa-bars color-white"></span>
 						</button>
-						<h1><a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;">	Swarm IIT Kharagpur
+						<h1><a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;"> Swarm IIT Kharagpur
 						</a></h1>
 					</div>
 					<div class="navbar-collapse collapse">
@@ -51,9 +51,9 @@
 						
 							<div class="align-center">
 								<i class="fa fa-flask fa-5x mar-bot20"></i>
-								<h2 class="slogan">Welcome to Swarm Research Group.</h2>
+								<h2 class="slogan">IIT-KGP </h2><h2 class="slogan-new">Swarm Robotics</h2><h2 class="slogan">Group</h2>
 								<p>
-				                Content goes in here.
+				                We are a group of enthusiastic, motivated students interested in exploring the contemporary field of distributed algorithms for robot swarms, and their implementation.
 								</p>	
 							</div>
 						</div>
@@ -69,8 +69,8 @@
 				<div class="col-lg-4" >
 					<div class="align-center">
 						<i class="fa fa-code fa-5x mar-bot20"></i>
-						<h4 class="text-bold">Something</h4>
-						<p>Single line description.
+						<h4 class="text-bold">What is Swarm Robotics?</h4>
+						<p>Swarm robotics is the study of how to design groups of robots that operate without relying on any external infrastructure or on any form of centralized control.
 						</p>
 					</div>
 				</div>
@@ -78,8 +78,8 @@
 				<div class="col-lg-4" >
 					<div class="align-center">
 						<i class="fa fa-terminal fa-5x mar-bot20"></i>
-						<h4 class="text-bold">Something Else</h4>
-						<p>Another one liner.
+						<h4 class="text-bold">Why Swarm Robotics?</h4>
+						<p>Swarm robotics is a major contemporary field of application and research in institutes around the world, not to mention a vastly untapped one in India. The potential for use in the industry as well as for non-commercial purposes is great.
 						</p>
 					</div>
 				</div>
@@ -87,8 +87,8 @@
 				<div class="col-lg-4" >
 					<div class="align-center">
 						<i class="fa fa-bolt fa-5x mar-bot20"></i>
-						<h4 class="text-bold">Something yet again</h4>
-						<p>Fill this up.
+						<h4 class="text-bold">Objective</h4>
+						<p>The aim of this project is to design a team of co-ordinating robots which use swarm intelligence to achieve a number of objectives related to navigation and mapping.
 						</p>
 					</div>
 				</div>
@@ -106,10 +106,10 @@
 							<div class="align-center">
 										<div class="testimonial pad-top40 pad-bot40 clearfix">
 											<h5>
-												Nunc velit risus, dapibus non interdum quis, suscipit nec dolor. Vivamus tempor tempus mauris vitae fermentum. In vitae nulla lacus. Sed sagittis tortor vel arcu sollicitudin nec tincidunt metus suscipit.Nunc velit risus, dapibus non interdum.
+												Please check the links above or scroll down to know more about our project, the problem statements, and the team involved. Also, we are always happy to talk to and work with interested students. Anybody from IIT Kharagpur who wishes to be part of the Swarm Robotics Group can check out the ‘JOIN US’ link at the top of the page for further information.
 											</h5>
 											<br/>
-											<span class="author">&mdash; MIKE DOE <a href="#">www.siteurl.com</a></span>
+											<!-- <span class="author">&mdash; MIKE DOE <a href="#">www.siteurl.com</a></span> -->
 										</div>
 
 								</div>
@@ -127,8 +127,9 @@
 				<div class="row mar-bot40">
 					<div class="col-md-offset-3 col-md-6">
 						<div class="section-header">
-							<h2 class="section-heading animated" data-animation="bounceInUp">Project Title</h2>
-							<p>Something about the project</p>
+							<h2 class="section-heading animated" data-animation="bounceInUp">Coordinated Exploration with Multi-Robot Swarms</h2>
+							<p>Our work encompasses the artificial intelligence and software, as well as the communication and embedded system operations necessary to demonstrate swarm behaviour and perform certain collective tasks such as coverage, patrolling, exploration and mapping. We are advised by Prof. Pallab Dasgupta of the Department of Computer Science and Engineering, and are funded by the Sponsored Research and Industrial Consultancy group of IIT Kharagpur. 
+</p>
 						</div>
 					</div>
 				</div>
