--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<!-- BASICS -->
         <meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<link rel="icon" type="image/png" href="http://swarm-iitkgp.github.io/favicon-16x16.png">
         <title>Swarm IIT Kharagpur</title>
         <meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,7 +63,7 @@
 			</section>
 		</div>
 		<!-- services -->
-		<section id="section-services" class="section pad-bot30 bg-white">
+		<section id="section-about" class="section pad-bot30 bg-white">
 		<div class="container"> 
 		
 			<div class="row mar-bot40">
@@ -122,7 +123,7 @@
 		</section>
 			
 		<!-- about -->
-		<section id="section-about" class="section appear clearfix">
+		<section id="section-work" class="section appear clearfix">
 		<div class="container">
 
 				<div class="row mar-bot40">
