--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav" data-0="margin-top:20px;" data-300="margin-top:5px;">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="#section-about">Project Description</a></li>
-							<li><a href="#section-works">Team</a></li>
+							<li><a href="#section-about">Overview</a></li>
+							<li><a href="#section-team">Team</a></li>
+							<li><a href="#parallax2">Project Description</a></li>
 							<li><a href="#section-contact">Join Us</a></li>
 						</ul>
 					</div><!--/.navbar-collapse -->
@@ -151,7 +152,7 @@
 		</section>
 		
 		<!-- section works -->
-		<section id="section-works" class="section appear clearfix">
+		<section id="section-team" class="section appear clearfix">
 			<div class="container">
 				
 				<div class="row mar-bot40">
@@ -181,7 +182,7 @@
 										<figure class="member-photo"><img src="img/team/Shushman.jpg" alt="" /></figure>
 										<div class="team-detail">
 											<h4>Shushman Choudhary</h4>
-											<span>Project Founder</span>
+											<span>Alumni (Founder)</span>
 										</div>
 									</div>
                                 </article>
