Changed link to PDG profile to open new tab

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 										<div class="testimonial pad-top40 pad-bot40 clearfix">
 											<h5>
 												<!-- Please check the links above or scroll down to know more about our project, the problem statements, and the team involved. -->
-												We are advised by <a href="http://cse.iitkgp.ac.in/~pallab/	">Prof. Pallab Dasgupta</a> of the Department of <a>Computer Science and Engineering</a>, and are funded by the <a>Sponsored Research and Industrial Consultancy</a> group of <a>IIT Kharagpur</a>.
+												We are advised by <a href="http://cse.iitkgp.ac.in/~pallab/" target="_blank">Prof. Pallab Dasgupta</a> of the Department of <a>Computer Science and Engineering</a>, and are funded by the <a>Sponsored Research and Industrial Consultancy</a> group of <a>IIT Kharagpur</a>.
 											</h5>
 											<br/>
 											<!-- <span class="author">&mdash; MIKE DOE <a href="#">www.siteurl.com</a></span> -->
