Added a Thanks page for successful submission of form

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 							<div id="sendmessage">
 								 Your message has been sent. Thank you!
 							</div>
-							<form action="http://formspree.io/abhinavjain241@gmail.com" method="post" role="form" class="contactForm">
+							<form action="http://formspree.io/soumyadeep9@gmail.com" method="post" role="form" class="contactForm">
 							  <div class="form-group">
 								<label for="name">Your Name</label>
 								<input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="maxlen:4" data-msg="Please enter at least 4 chars" />
@@ -464,7 +464,7 @@
 								<div class="validation"></div>
 							  </div>
 							  <input type="text" name="_gotcha" style="display:none" />
-							  <input type="hidden" name="_next" value="http://swarm-iitkgp.github.io/" />
+							  <input type="hidden" name="_next" value="thanks.html" />
 							  <button type="submit" class="btn btn-theme pull-left">SEND MESSAGE</button>
 							</form>
 
