Added other email address for CC in Formspree

--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
 								 Your message has been sent. Thank you!
 							</div>
 							<form action="http://formspree.io/soumyadeep9@gmail.com" method="post" role="form" class="contactForm">
+
 							  <div class="form-group">
 								<label for="name">Your Name</label>
 								<input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="maxlen:4" data-msg="Please enter at least 4 chars" />
@@ -465,6 +466,10 @@
 							  </div>
 							  <input type="text" name="_gotcha" style="display:none" />
 							  <input type="hidden" name="_next" value="thanks.html" />
+							  <input type="hidden" name="_cc" value="kumar.1994.14@gmail.com" />
+							  <input type="hidden" name="_cc" value="ayush.9.pandey@gmail.com" />
+							  <input type="hidden" name="_cc" value="rishalraj666@gmail.com" />
+							  <input type="hidden" name="_cc" value="abhinavjain241@gmail.com" />
 							  <button type="submit" class="btn btn-theme pull-left">SEND MESSAGE</button>
 							</form>
 
