--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 										<figure class="member-photo"><img src="img/team/Shushman.jpg" alt="" /></figure>
 										<div class="team-detail">
 											<h4>Shushman Choudhary</h4>
-											<span>Alumni (Founder)</span>
+											<span>Alumnus (Founder)</span>
 										</div>
 									</div>
                                 </article>
