Changed Contact Us to Join Us

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 				<div class="row mar-bot40">
 					<div class="col-md-offset-3 col-md-6">
 						<div class="section-header">
-							<h2 class="section-heading animated" data-animation="bounceInUp">Contact us</h2>
+							<h2 class="section-heading animated" data-animation="bounceInUp">Join us</h2>
 							<p>We are always happy to talk to and work with interested students. Anybody from IIT Kharagpur who wishes to be part of the Swarm Robotics Group, fill this up and click on 'Send Message'!</p>
 						</div>
 					</div>
