Added link to Contact Us section on Header

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 							<li><a href="#section-team">Team</a></li>
 							<li><a href="#section-description">Project Description</a></li>
 							<li><a href="#section-join">Join Us</a></li>
+							<li><a href="#section-contact">Contact</a></li>
 						</ul>
 					</div><!--/.navbar-collapse -->
 				</div>
