Changed @ to [at] in contact email

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 							<h2 class="section-heading animated" data-animation="bounceInUp">Contact Us</h2>
 								Contacts:
 							<p>
-								<b>Soumyadeep Mukherjee</b> - <a class="tweak" href="mailto:soumyadeep.mukherjee@iitkgp.ac.in">soumyadeep.mukherjee@iitkgp.ac.in</a>
+								<b>Soumyadeep Mukherjee</b> - <a class="tweak" href="mailto:soumyadeep.mukherjee@iitkgp.ac.in">soumyadeep.mukherjee [at] iitkgp.ac.in</a>
 							</p>
 						</div>
 					</div>
