Added link to CFER page

--- a/index.html
+++ b/index.html
@@ -482,6 +482,9 @@
                            <p>Copyright &copy; 2015 <a>IIT-KGP Swarm Robotics Project</a>, made using <a href="http://bootstraptaste.com">Bootstraptaste</a></p>
                         </div>
                      </div>
+		     <div class="row align-right">
+		      <div class="col-sm-12">Recognized under <a href="http://www.cferobotics.iitkgp.ac.in/" target="_blank">CFER , IIT Kharagpur</a></div> 
+		    </div>
                   </div>
                </section>
                <a href="#header" class="scrollup"><i class="fa fa-chevron-up"></i></a>	
