--- a/index.html
+++ b/index.html
@@ -365,6 +365,15 @@
                                     </div>
                                  </div>
                               </article>
+                              <article class="col-md-2 isotopeItem software">
+				<div class="team-member" align="center">
+				   <figure class="member-photo"><img src="img/team/Shivang.jpg" alt="" /></figure>
+				   <div class="team-detail">
+				      <h4>Shivang Agrawal</h4>
+				      <span>Member, Software Team</span>                  
+				    </div>
+				 </div>
+				</article>
                            </div>
                         </div>
                      </div>
