--- a/index.html
+++ b/index.html
@@ -320,6 +320,16 @@
                                     </div>
                                  </div>
                               </article>
+			      <article class="col-md-2 isotopeItem software">
+                                 <div class="team-member align-center">
+                                    <figure class="member-photo"><img src="img/team/Indresh.jpg" alt="" /></figure>
+                                    <div class="team-detail">
+                                       <h4>Indresh</h4>
+                                       <span>Member, Software Team</span>
+                                    </div>
+                                 </div>
+                              </article>
+                              
                               <article class="col-md-2 isotopeItem software">
                                  <div class="team-member align-center">
                                     <figure class="member-photo"><img src="img/team/Barno.jpg" alt="" /></figure>
